#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]

resolver = "2"

members = [
    "crates/helpers/virtio-hal-impl",
    "crates/pds/server",
    "crates/pds/server/core",
    "crates/pds/pl031-driver",
    "crates/pds/pl031-driver/core",
    "crates/pds/pl031-driver/interface-types",
    "crates/pds/sp804-driver",
    "crates/pds/sp804-driver/core",
    "crates/pds/sp804-driver/interface-types",
    "crates/pds/virtio-blk-driver",
    "crates/pds/virtio-net-driver",
    "crates/pds/virtio-net-driver/interface-types",
]

[patch.crates-io.ring]
git = "https://github.com/coliasgroup/ring.git"
rev = "10a2b3cbe68da77f9f20ebb3776ab4c605f2b40e"
