#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[workspace]

resolver = "2"

members = [
    "crates/pds/server",
    "crates/pds/server/core",
    "crates/pds/pl031-driver",
    "crates/pds/sp804-driver",
    "crates/pds/virtio-blk-driver",
    "crates/pds/virtio-net-driver",
]

[patch.crates-io.ring]
git = "https://github.com/coliasgroup/ring.git"
rev = "0f749acc5d5a8310dfc3ff985df04056f497fc1b"
