[package]
name = "banscii-artist"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-artist-interface-types = { path = "./interface-types" }
rsa = { version = "0.8.1", default-features = false, features = ["pem", "sha2"] }

[dependencies.sel4cp]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "96b27b7ed5c7ad1c53d5b7adca159d3fc5283b9e"
features = ["alloc"]

[build-dependencies]
rsa = "0.8.1"
