[package]
name = "example"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies.sel4]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "7240d83b79ff8263e42ee0fd66a15189825dac99"

[dependencies.sel4-root-task-runtime]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "7240d83b79ff8263e42ee0fd66a15189825dac99"
