[package]
name = "banscii-pl011-driver"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-pl011-driver-interface-types = { path = "./interface-types" }
heapless = "*"
tock-registers = "*"

[dependencies.sel4cp]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "3a9027494ab7fd40eb8ca1d8231350fd47e4b813"
default-features = false
