[package]
name = "banscii-pl011-driver"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
banscii-pl011-driver-interface-types = { path = "./interface-types" }
heapless = "0.7.16"
tock-registers = "0.8.1"

[dependencies.sel4cp]
git = "https://gitlab.com/coliasgroup/rust-seL4"
rev = "96b27b7ed5c7ad1c53d5b7adca159d3fc5283b9e"
default-features = false
