[package]
name = "sel4cp-http-server-example-server"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
async-unsync = { version = "0.2.2", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["async-await", "alloc"] }
log = "0.4.17"
sel4 = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-async-block-io = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-async-network = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-async-request-statuses = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-async-timers = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-bounce-buffer-allocator = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-immediate-sync-once-cell = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-logging = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-shared-ring-buffer = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-shared-ring-buffer-block-io = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-shared-ring-buffer-smoltcp = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4-sync = { git = "https://github.com/coliasgroup/rust-seL4" }
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", default-features = false, features = ["alloc"] }
sel4cp-http-server-example-server-core = { path = "./core", features = [] }

[dependencies.sel4-async-single-threaded-executor]
git = "https://github.com/coliasgroup/rust-seL4"

[dependencies.sel4-externally-shared]
git = "https://github.com/coliasgroup/rust-seL4"
features = ["unstable", "alloc"]

[dependencies.sel4-newlib]
git = "https://github.com/coliasgroup/rust-seL4"
features = ["nosys", "all-symbols", "sel4-panicking-env"]

[dependencies.sel4-shared-ring-buffer-block-io-types]
git = "https://github.com/coliasgroup/rust-seL4"

[dependencies.sel4cp-http-server-example-sp804-driver-interface-types]
path = "../sp804-driver/interface-types"

[dependencies.sel4cp-http-server-example-virtio-net-driver-interface-types]
path = "../virtio-net-driver/interface-types"

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = ["proto-ipv4", "proto-dhcpv4", "proto-dns", "socket-dhcpv4", "socket-dns", "socket-tcp"]

[build-dependencies]
rcgen = "0.11.1"
