[package]
name = "sel4cp-http-server-example-sp804-driver"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4cp = { git = "https://github.com/coliasgroup/rust-seL4", default-features = false }
sel4cp-http-server-example-sp804-driver-core = { path = "./core" }
sel4cp-http-server-example-sp804-driver-interface-types = { path = "./interface-types" }
sel4cp-message = { git = "https://github.com/coliasgroup/rust-seL4" }
