[package]
name = "microkit-http-server-example-sp804-driver"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
microkit-http-server-example-sp804-driver-core = { path = "./core" }
microkit-http-server-example-sp804-driver-interface-types = { path = "./interface-types" }
sel4-microkit = { git = "https://github.com/seL4/rust-sel4", default-features = false }
sel4-microkit-message = { git = "https://github.com/seL4/rust-sel4" }
