[package]
name = "microkit-http-server-example-server-core"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[features]
debug = ["mbedtls/debug"]

[dependencies]
futures = { version = "0.3.28", default-features = false, features = ["async-await", "alloc"] }
httparse = { version = "1.8.0", default-features = false }
log = "0.4.17"
sel4-async-block-io = { git = "https://github.com/seL4/rust-sel4" }
sel4-async-block-io-cpiofs = { git = "https://github.com/seL4/rust-sel4" }
sel4-async-network = { git = "https://github.com/seL4/rust-sel4" }
sel4-async-network-mbedtls = { git = "https://github.com/seL4/rust-sel4" }
sel4-async-timers = { git = "https://github.com/seL4/rust-sel4" }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4" }

[dependencies.mbedtls]
git = "https://github.com/nspin/rust-mbedtls"
tag = "keep/6eef662dbf636d1ccf86078143b6854f"
default-features = false
features = ["no_std_deps"]

[dependencies.sel4-async-single-threaded-executor]
git = "https://github.com/seL4/rust-sel4"
